se ha modificado el titulo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                       <div id="contain-title">
 
-                        <h1>Chismo Nation</h1>
+                        <h1>Conutry info</h1>
 
                       </div>
                       
